--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h1 class="text-primary mt-2">Rohan Kumawat</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-light"></h4>
-                        <div class="typed-text d-none">ASP.NET Developer, Freelancer, Web API Developer, Front End Developer, Windows Apps Developer, Backend Developer, Umbraco Developer</div>
+                        <div class="typed-text d-none">ASP.NET Developer, .Net Core Developer, Freelancer, Web API Developer, Front End Developer, Windows Apps Developer, Backend Developer, Umbraco Developer, Portfolio Developer</div>
                     </div>
                     <div class="d-flex justify-content-center mt-auto mb-3">
                         <a class="btn btn-secondary btn-square mx-1" href="javascript:void(0)"><i
@@ -181,19 +181,7 @@
                             <h5 class="mb-1">ASP.NET Core Developer</h5>
                             <p class="mb-2">Sumedha Softech Pvt Ltd | <small>Jan 2023 - Jun 2024</small></p>
                             <p>Collaborated with senior developers in using Designed and developed RESTful APIs using ASP.NET Core 7, ensuring secure and efficient data handling, Migrated legacy systems, Contributed to Agile Scrum processes, participating in sprint planning, daily standups, and client communication.</p>
-                        </div>
-                        <!-- <div class="position-relative mb-4">
-                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
-                                <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
-                                <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-                            </div>
-                            <div class="position-relative mb-4">
-                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
-                                <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
-                                <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-                            </div> -->
+                        </div>                        
                     </div>
                 </section>
                 <!-- Expericence End -->
